infra/k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 31300
      protocol: TCP
