infra/k8s/prod/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: prod
  labels:
    app: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 31301
