infra/k8s/prod/yolo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo
  namespace: prod
  labels:
    app: yolo
spec:
  type: ClusterIP
  selector:
    app: yolo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
