infra/k8s/prod/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: prod
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: prod.adan.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
